--- a/VeraciLib/VeraciLib.csproj
+++ b/VeraciLib/VeraciLib.csproj
@@ -15,8 +15,8 @@
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy $(ProjectDir)appkeys.json $(OutDir)" />
-    <Exec Command="copy $(ProjectDir)appkeys.json $(SolutionDir)VeraciBot/bin/$(ConfigurationName)/net9.0" />
-    <Exec Command="copy $(ProjectDir)appkeys.json $(SolutionDir)VeraciApp/bin/$(ConfigurationName)/net9.0" />
+    <Exec Command="copy $(ProjectDir)appkeys.json $(SolutionDir)VeraciBot\\bin\\$(ConfigurationName)\\net9.0" />
+    <Exec Command="copy $(ProjectDir)appkeys.json $(SolutionDir)VeraciApp\\bin\\$(ConfigurationName)\\net9.0" />
   </Target>
 
 </Project>
