Alteração base css

--- a/VeraciApp/VeraciApp.csproj
+++ b/VeraciApp/VeraciApp.csproj
@@ -10,10 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\base.css" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
@@ -27,14 +23,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="wwwroot\base.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-	<None Include="wwwroot\veracibot.ico" />
+    <ProjectReference Include="..\VeraciLib\VeraciLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VeraciLib\VeraciLib.csproj" />
+    <Content Update="wwwroot\base.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\favicon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\veracibot.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
