criado projeto web API, refatorando código. implementado IOptions para appSettings melhores configuracoes do EF Core historico de saldo de pontuacao

--- a/VeraciBot/VeraciBot.csproj
+++ b/VeraciBot/VeraciBot.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <UserSecretsId>36c789a5-090d-4285-a53b-0e92e2c0cf98</UserSecretsId>
   </PropertyGroup>
 
