--- a/Veracibot.API/appsettings.json
+++ b/Veracibot.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=veracibot.db"
+    //"DefaultConnection": "Data Source=veracibot.db"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=veracibot;Integrated Security=false; Persist Security Info=False; USER ID=sa; Password=123;Encrypt=False;"
   },
   "AllowedHosts": "*",
   "TweeterOptions": {
