change image dir

--- a/Veracibot.API/Veracibot.API.csproj
+++ b/Veracibot.API/Veracibot.API.csproj
@@ -77,4 +77,16 @@
     <None Include="wwwroot\Images\voce.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Images\01.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\02.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\03.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
